rename page id names with prefix' page-' as new GuTauS convetion

--- a/mobile/css/style-mobil.css
+++ b/mobile/css/style-mobil.css
@@ -14,7 +14,7 @@ float:right;
 .massage-line-header{
 	background-color: lightyellow;
 	color:  black;
-	text-align: left;
+	text-align: center;
 }
 
 .info-line-1-footer{
