1.) include page-members-list-debtors 2.) read debtors-info from DB for page-profile 3.) show deptors name and avatar on page-profile

--- a/mobile/css/style-mobil.css
+++ b/mobile/css/style-mobil.css
@@ -8,7 +8,7 @@
 
 .info-line-header{
 	background-color: Crimson; 
-	color:  black;
+	color:  white;
 	text-align: center; 
 }
 .massage-line-header{
